--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,73 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
+a{
+    text-decoration: none;
+}
+/* End the comment parts */
+nav{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 21px auto;
+}
+.log{
+    flex-basis: 50%;
+
+}
+.log a{
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 43.25px;
+    line-height: 34px;
+    display: flex;
+    align-items: center;
+}
+.main-nav{
+    flex-basis: 50%;
+
+
+}
+.main-nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    float: right;
+
+}
+.main-nav ul li{
+    float: left;
+    list-style: none;
+}
+.main-nav ul li a{
+    width: 61px;
+    height: 28px;
+    padding: 10px;
+    margin: 0 20px;
+
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 28px;
+    padding: 20px;
+}
+
+.hader-content{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: auto;
+
+}
+.text-content{
+    flex-basis: 50%;
+
+}
+.image-content{
+    flex-basis: 50%;
+}    
