--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a{
 
 header{
     background: #0A2640;
-    height: 100vh;
+    height: 90vh;
 }
 nav{
     display: flex;
@@ -156,6 +156,10 @@ nav{
     margin: 30px 21px;
 }
 .icon-sec{
+    display: flex;
+    height: 48px;
+    margin-top: 30px;
+
 
     
    
@@ -164,12 +168,14 @@ nav{
 .icon-sec ul{
     display: inline-flex;
     flex-wrap: wrap;
-    height: 48px;
     margin: auto;
+    
 
 
 }
 .icon-sec ul li{
+    list-style: none;
+    margin: 0 25px;
 
 }
 .icon-sec ul li a{
