--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ a{
 
 header{
     background: #0A2640;
-    height: 90vh;
+    
 }
 nav{
     display: flex;
@@ -111,6 +111,7 @@ nav{
 }
 .image-content img{
     float: right;
+    width: 100%;
 }
 .active-btn{
     display: inline-flex;
