--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,14 @@ a{
 
 header{
     background: #0A2640;
-    
+    position: relative;
+    background-image: url(../images/Ellipse\ 9.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: 642px;
+
 }
+
 nav{
     display: flex;
     flex-wrap: wrap;
@@ -158,21 +164,14 @@ nav{
 }
 .icon-sec{
     display: flex;
-    height: 48px;
-    margin-top: 30px;
-
-
+    
     
    
-
 }
 .icon-sec ul{
     display: inline-flex;
     flex-wrap: wrap;
     margin: auto;
-    
-
-
 }
 .icon-sec ul li{
     list-style: none;
@@ -188,4 +187,5 @@ nav{
     display: flex;
     align-items: center;
     color: #FFFFFF;
+    margin: 20px 0px;
 }
