--- a/css/style.css
+++ b/css/style.css
@@ -322,3 +322,27 @@ nav{
 .our-clients{
     margin-top: 78px;
 }
+/* End first single customer */
+.single-p2{
+    display: inline-flex;
+    align-items: center;
+    margin: 10px 0px;
+   
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.08);
+}
+.single-p2 p{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    margin-left: 10px
+
+}
+.single-p2:hover{
+    background: #0A2640;
+
+}
