--- a/css/style.css
+++ b/css/style.css
@@ -376,3 +376,29 @@ nav{
     border-radius: 50%;
     border: none;
 }
+.main-slider{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.slider{
+    
+    flex-basis: 350px;
+    height: 322px;
+    background: #FFFFFF;
+    box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.12);
+    border-radius: 12px;
+
+
+}
+.slider-text{
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: left;
+    padding: 37px;
+}
+.slider-content{
+    display: flex;
+}
