--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,10 @@ nav{
 .client-img{
     flex-basis: 50%;
 }
+.client-img img{
+    width: 90%;
+}
+
 .client-content{
     flex-basis: 50%;
 }
@@ -375,6 +379,7 @@ nav{
     height: 55px;
     border-radius: 50%;
     border: none;
+    margin: 5px;
 }
 .main-slider{
     display: flex;
