--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@ line-height: 32px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 0px 49px;
+    padding: 31px 49px;
 
 }
 .simple-heading{
@@ -467,4 +467,27 @@ line-height: 32px;
 .slider-area{
     flex-basis: 50%;
 
+}
+.single-accordation{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    border-bottom: 1px solid #C4C4C4;
+    align-items: center;
+    width: 449px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    padding-bottom: 7px;
+ 
+    
+}
+.single-accordation img{
+    padding-left: 35px;
+}
+.single-accordation p{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
 }
