--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ header{
     background-repeat: no-repeat;
     background-position: top right;
     background-size: 642px;
+    padding: 0 10px;
 
 }
 
@@ -230,6 +231,11 @@ nav{
 }
 .home-single{
     flex-basis: 28%;
+}
+.home-single img{
+    width: 300px;
+    height: 354px;
+
 }
 .home-single h3{
      font-family: 'Open Sans';
