--- a/css/style.css
+++ b/css/style.css
@@ -366,14 +366,10 @@ nav{
 }
 .slide-box{
     display: flex;
-    position: relative;
+    
 
 }
-.slide-btn{
-    position: absolute;
-    bottom: 0;
-    right: 0
-}
+
 .slide-sec h2{
     font-family: 'Manrope';
     font-weight: 400;
@@ -383,18 +379,35 @@ nav{
     
 }
 
-.btn-s{
+.main-slider{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 52px;
+}
+.btn-s-prev{
+    position: absolute;
+    top: -48px;
+    right: 134px;
+
     width: 55px;
     height: 55px;
     border-radius: 50%;
     border: none;
     margin: 5px;
+    cursor: pointer;
 }
-.main-slider{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 52px;
+.btn-s-prev-next{
+    position: absolute;
+    top: -48px;
+    right: 64px;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: none;
+    margin: 5px;
+    cursor: pointer;
 }
 .slider{
     
@@ -403,6 +416,7 @@ nav{
     background: #FFFFFF;
     box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.12);
     border-radius: 12px;
+    margin: 10px;
 
 
 }
