--- a/css/style.css
+++ b/css/style.css
@@ -783,3 +783,31 @@ color: #0A2640;
 
 
 }
+/* Slick dots css */
+.slick-dots{
+    display: flex;
+	justify-content: center;
+	margin: auto;
+	padding: 1rem 0;
+	
+	list-style-type: none;
+}
+.slick-dots   li {
+        margin: 0 0.25rem;
+    }
+    .slick-dots   li  button {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        padding: 0;
+        
+        border: none;
+        border-radius: 100%;
+        background-color: #5E5E5E;;
+        
+        text-indent: -9999px;
+    }
+
+    li.slick-active button {
+        background-color: #ffff;
+    }
